<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CV Application</string>
    <string name="action_settings">Settings</string>
    <string name="app_welcome">Check your candidate!</string>
    <string name="call_me">Call me</string>
    <string name="education_languages">Education and languages</string>
    <string name="experience">Experience</string>
    <string name="get_in_contact">Get in contact:</string>
    <string name="hobbies">Hobbies</string>
    <string name="knowledge">Courses</string>
    <string name="logged">logged in</string>
    <string name="login">login</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="not_logged">not logged in</string>
    <string name="password">password</string>
    <string name="prompt1">Login, using data from the email.\nConfirm with the button to the right.</string>
    <string name="prompt2">After logging in, a SWIPE from the left side\nwill show you a menu.</string>
    <string name="send_mail">E-mail me</string>
    <string name="telephone_number">+48513189802</string>
    <string name="write_sms">Message me by SMS</string>
    <string name="living_in">Currently living in Olawa, Poland</string>
    <string name="place_born">Born in Wroclaw, Poland</string>
    <string name="psychology_student">M.S. in Business Psychology at University of Social Sciences and Humanities</string>
    <string name="author_name">Adrian Borysionek</string>
    <string name="wrong_pass">Wrong data, access disabled!</string>
    <string name="recruit">Recruitment</string>
    <string name="email_body">Dear Sir,</string>
    <string name="send_email2">Send Email</string>
    <string name="title_activity_experience">Experience</string>
    <string name="title_activity_education_and_languages">EducationAndLanguages</string>
    <string name="title_activity_courses_and_knowledge">CoursesAndKnowledge</string>
    <string name="title_activity_hobbies">Hobbies</string>
    <string name="locale">"en"</string>
    <string name="click_to_check_it_out">click to check it out!</string>
    <string name="java_android_at_software_development_academy">JAVA + ANDROID at Software Development Academy</string>
    <string name="other_courses">OTHER COURSES:</string>
    <string name="driving_license_since_2009_made_in_poland">Driving license, since 2009, made in Poland</string>
    <string name="forklift_driver_license_since_2011_made_in_poland">Forklift driver license, since 2011, made in Poland</string>
    <string name="loader_driver_license_since_2014_made_in_poland">Loader driver license, since 2014, made in Poland</string>
    <string name="digger_driver_license_since_2014_made_in_poland">Digger-loader license, since 2014, made in Poland</string>
    <string name="i_also_gathered_experience_working_for">I ALSO GATHERED EXPERIENCE WORKING FOR:</string>
    <string name="students_autonomy_administrative_as_a_chairman_of_the_initiative_commision">Students autonomy administrative, as a Chairman of the Initiative Commision</string>
    <string name="marketing_at_the_university_of_social_sciences_and_humanities_as_part_of_my_probation">Marketing at the University of Social Sciences and Humanities, as part of my probation</string>
    <string name="advanced_level">Advanced level</string>
    <string name="beginners_level">Beginners level</string>
    <string name="logo1exp">Best salesman in January 2013</string>
    <string name="logo2exp">Three different job promotions: salesman, consultant and debt-collector</string>
    <string name="logo3exp">Organising 2 extra language groups</string>
    <string name="logo4exp">Helping friends with the beginning of a company, in the marketing and PR division</string>
    <string name="logo5exp">Best product presentation during the qualification exams</string>
    <string name="logo6exp">Three different positions learned at the assembly line in two weeks</string>
    <string name="movies_cinema">Movies, mostly crime and noir</string>
    <string name="programming">Programming, computers</string>
    <string name="games_n_multiplayer">Games, multiplayer and LIVE streaming</string>
    <string name="good_book">A good book, mainly Puzo or King</string>
    <string name="graphics_design">Level design and graphics creation</string>
    <string name="travelling_places">Travelling to interesting places</string>
</resources>