<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_courses_and_knowledge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:theme="@style/AppTheme.NoActionBar"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pl.sda.android.applicationcv.CoursesAndKnowledge"
    tools:showIn="@layout/activity_courses_and_knowledge"
    android:background="@raw/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="26sp"
        android:textColor="@color/icons"
        android:text="@string/knowledge"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_bright"
        android:textStyle="bold"
        android:layout_marginTop="40sp"
        android:paddingLeft="10sp"
        android:text="@string/java_android_at_software_development_academy"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_light"
        android:layout_marginTop="80sp"
        android:textStyle="bold|italic"
        android:gravity="center"
        android:paddingLeft="10sp"
        android:text="@string/other_courses"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_green_light"
        android:textStyle="bold"
        android:layout_marginTop="120sp"
        android:paddingLeft="10sp"
        android:text="@string/driving_license_since_2009_made_in_poland"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_bright"
        android:textStyle="bold"
        android:layout_marginTop="160sp"
        android:paddingLeft="10sp"
        android:text="@string/forklift_driver_license_since_2011_made_in_poland"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_green_light"
        android:textStyle="bold"
        android:layout_marginTop="200sp"
        android:paddingLeft="10sp"
        android:text="@string/loader_driver_license_since_2014_made_in_poland"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_bright"
        android:textStyle="bold"
        android:layout_marginTop="240sp"
        android:paddingLeft="10sp"
        android:text="@string/digger_driver_license_since_2014_made_in_poland"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_light"
        android:gravity="center"
        android:textStyle="bold|italic"
        android:layout_marginTop="280sp"
        android:paddingLeft="10sp"
        android:text="@string/i_also_gathered_experience_working_for"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_green_light"
        android:textStyle="bold"
        android:layout_marginTop="320sp"
        android:paddingLeft="10sp"
        android:text="@string/students_autonomy_administrative_as_a_chairman_of_the_initiative_commision"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_bright"
        android:textStyle="bold"
        android:layout_marginTop="380sp"
        android:paddingLeft="10sp"
        android:text="@string/marketing_at_the_university_of_social_sciences_and_humanities_as_part_of_my_probation"/>
</RelativeLayout>
