<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="pl.sda.android.applicationcv.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_float_login" />
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textStyle="italic"
    android:layout_gravity="center"
    android:layout_marginTop="-420sp"
    android:textSize="24sp"
    android:textColor="@color/icons"
    android:text="@string/app_welcome"
    android:gravity="center"/>
    <ImageView
        android:id="@+id/i_am_not_connected_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_main_notconnected"
        android:layout_gravity="center"
        android:layout_marginTop="-240sp" />
    <ImageView
        android:id="@+id/i_am_connected_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_main_connected"
        android:layout_gravity="center"
        android:layout_marginTop="-240sp" />
    <TextView
        android:id="@+id/i_am_not_connected"
        android:text="@string/not_logged"
        android:textColor="@android:color/holo_red_light"
        android:layout_marginTop="-80sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/i_am_connected"
        android:text="@string/logged"
        android:textColor="@android:color/holo_green_light"
        android:layout_marginTop="-80sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/main_act_text1"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/icons"
        android:text="@string/prompt1"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/main_act_login"
        android:layout_gravity="center"
        android:layout_marginTop="80sp"
        android:gravity="center"
        android:textColorHint="@color/icons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"/>
    <android.support.design.widget.TextInputEditText
        android:id="@+id/main_act_password"
        android:layout_gravity="center"
        android:layout_marginTop="160sp"
        android:gravity="center"
        android:inputType="textPassword"
        android:textColorHint="@color/icons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt2"
        android:textColor="@color/icons"
        android:layout_gravity="center"
        android:layout_marginTop="240sp"
        android:gravity="center"/>

</android.support.design.widget.CoordinatorLayout>
