<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/fab_margin">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80sp"
            android:layout_marginLeft="-10sp"
            android:layout_height="150dp"
            android:gravity="end"
            android:textAlignment="gravity"
            app:srcCompat="@raw/adrianzdjecie" />

        <pl.sda.android.applicationcv.AutoResizeTextView
            android:id="@+id/nav_header_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/imageView"
            android:paddingTop="@dimen/nav_smallmargin"
            android:maxLines="1"
            android:paddingLeft="@dimen/nav_smallmargin"
            android:textStyle="bold"
            android:text="@string/author_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="20sp" />

        <pl.sda.android.applicationcv.AutoResizeTextView
            android:id="@+id/nav_header_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:maxLines="1"
            android:layout_below="@id/nav_header_author"
            android:layout_toRightOf="@id/imageView"
            android:paddingLeft="@dimen/nav_smallmargin"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="adrianborysionek@gmail.com" />

        <pl.sda.android.applicationcv.AutoResizeTextView
            android:id="@+id/nav_header_content"
            android:textSize="11sp"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_below="@id/nav_header_email"
            android:layout_toRightOf="@id/imageView"
            android:paddingLeft="@dimen/nav_smallmargin"
            android:paddingTop="@dimen/nav_smallmargin"
            android:text="@string/psychology_student" />

        <pl.sda.android.applicationcv.AutoResizeTextView
            android:id="@+id/nav_header_content2"
            android:layout_width="160sp"
            android:textSize="11sp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_below="@id/nav_header_content"
            android:layout_toRightOf="@id/imageView"
            android:paddingLeft="@dimen/nav_smallmargin"
            android:text="@string/place_born" />

        <pl.sda.android.applicationcv.AutoResizeTextView
            android:id="@+id/nav_header_content3"
            android:layout_width="160sp"
            android:textSize="11sp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:layout_below="@id/nav_header_content2"
            android:layout_toRightOf="@id/imageView"
            android:paddingLeft="@dimen/nav_smallmargin"
            android:text="@string/living_in" />
    </RelativeLayout>
</LinearLayout>
